--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0018ee;
+  background-color: #000000;
   color: #fff;
   overflow-x: hidden;
 }
@@ -116,8 +116,8 @@ h1 {
 
 button {
   cursor: pointer;
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
+  background-color: rgb(0, 26, 255);
+  color: rgb(255, 255, 255);
   border: none;
   font-weight: bold;
   font-family: inherit;
@@ -128,11 +128,11 @@ button {
 }
 
 button:hover {
-  background-color: #cccccc;
+  background-color: #001aac;
 }
 
 button:focus {
-  background-color: rgb(155, 155, 155);
+  background-color: rgb(0, 9, 131);
 }
 
 button:disabled {
